tests/control/for_not_range.esl
// error: 5 is not an iterable type

func main() {
    for (let i of 5) {
        print("{}", i);
    }
}
